<resources>
    <string name="app_name">Tarbinol</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_userId">     Enter user id</string>
    <string name="prompt_password">     Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_short">LOGIN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_executive_name">Executive Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="select_your_route">SELECT YOUR ROUTE</string>
    <string name="monday">MONDAY</string>
    <string name="palarivattom">PALARIVATTOM</string>
    <string name="keralahardwareshop">Kerala Hardware Shop</string>
    <string name="action_checkin">CHECK IN</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednsday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="other">OTHER</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dashboardLocation">Palarivattom,cochin</string>
    <string name="title_activity_checkin_title">Check in</string>
    <string name="take_order">Take Order</string>
    <string name="checkedin_visible">Checked in</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="your_order_successfully_placed">Your order successfully Placed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asian_paints">Asian paints</string>
    <string name="apex_duracast_pebbletex">apex duracast pebbletex</string>
    <string name="required">Required</string>
    <string name="in_stock">In Stock</string>



    <string name="google_maps_key">AIzaSyDXcAj4tByHgf7qK-oaNVo1913IbZb_Tsc</string>
</resources>
